# untroche_server

./: Cargo.toml  README.md  build.bat
db/: strings.db  strings.init.db
game/scene/: test  オープニング  何もない  研究室  花の広場
game/scene/岩場/: ここは危ないよ  チャット  他の場所へ  尖塔を眺める  賢者  隠された研究室
game/scene/森林/: 丸太小屋  他の場所へ  姓名判断所  果樹  花の香  隙間から
game/scene/楽園/: ようこそ  レストラン  世界の歩き方  名前  帰る  散策
game/scene/海辺/: 他の場所へ  何もない  合成  宝探し  所持限界  楽園へ  釣り
game/scene/草原/: どこにでも繋がる  ガチャ  他の場所へ  装備品  装備品2  通り魔  門前へ
game/scene/門前/: いつか開く  サンドバッグ  プロフィール  ホワイトデー  屋台  草原へ  見上げる
html/: admin.html  archive.html  characters.html  entrance.html  game.html  maintenance.html  rulebook.html  untroche.html
resource/: style.css
resource/strings/: photo.html
resource/strings/api/: alertify.min.js
resource/strings/api/css/: alertify.min.css
resource/strings/css/: archive.css  entrance.css  game.css  maintenance.css  strings.css  style.css
resource/strings/css/admin/: style.css
resource/strings/html/: rulebook.html
resource/strings/js/: ajax.class.js  archive.js  battle.js  characters.js  common.js  cookie.class.js  entrance.js  game.js  maintenance.js
resource/strings/js/admin/: index.js
src/: main.rs
src/strings/: admin.rs  archive.rs  battle.rs  common.rs  func.rs  mod.rs  scene.rs
