[package]
name = "untroche"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
awc = "3.4.0"
fancy-regex = "0.13.0"
liquid = "0.26.4"
rand = "0.8.5"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
unicode-segmentation = "1.11.0"

[dependencies.rusqlite]
version = "0.31.0"
features = [
	"bundled",
	"i128_blob",
]

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
